--- a/views/partials/stocking.ejs
+++ b/views/partials/stocking.ejs
@@ -1,25 +1,46 @@
 <!-- Populates trout stocking data on River Show Route -->
 
-<% var stockedRiver = river.name; %>
-
-<!-- Google Charts API -->
-	<script type="text/javascript">
-		//Passes River name variable from server side to client side
-		//Gets used in gcharts.js
-		//There's probably a better way to do this
-		var theRiver = "<%=stockedRiver%>";
-	</script>
-	<script type="text/javascript" src="../js/gcharts.js"></script>
-<!-- END google charts API -->
-
-<div class="col">
-<h2 style="margin-top:10px; text-align: center;">Trout Stocking Report <small>for <%= river.name %></small></h2>
-    
-    <!-- Dashboard populated via Google Charts script -->
-	<div id="dashboard_div">
-		<div id="filter_div" class="filter" style="display:none"></div> <!-- hide Waterbody filter -->
-			<!-- Filter by Town: --> <div id="filterTown_div" class="filter"></div>
-		<div id="trout_table"></div>
+<div class="panel panel-info" id="stocking">
+	<div class="panel-heading">
+		<h2 class="panel-title">Trout Stocking</h3>
 	</div>
 
-</div> <!-- col -->
+	<div class="panel-body">
+		<div class="container-fluid">
+			<div class="row">
+			
+				<% var stockedRiver = river.name; %>
+			
+				<!-- Google Charts API -->
+				<script type="text/javascript">
+					//Passes River name variable from server side to client side
+					//Gets used in gcharts.js
+					//There's probably a better way to do this
+					var theRiver = "<%=stockedRiver%>";
+				</script>
+				
+				<script type="text/javascript" src="../js/gcharts.js"></script>
+				<!-- END google charts API -->
+			
+				<div class="col">
+					<h2 style="margin-top:10px; text-align: center;">
+						Trout Stocking Report <small>for <%= river.name %></small>
+					</h2>
+				
+					<!-- Dashboard populated via Google Charts script -->
+					<div id="dashboard_div">
+						<div id="filter_div" class="filter" style="display:none"></div> <!-- hide Waterbody filter -->
+						<!-- Filter by Town: --> 
+						<div id="filterTown_div" class="filter"></div>
+						<div id="trout_table"></div>
+					</div>
+				</div> <!-- col -->
+			</div> <!-- row -->
+		</div> <!-- container-fluid -->
+	</div> <!-- panel-body -->
+
+	<div class="panel-footer text-right">
+		<small><em>Stocking Data via Massachusetts DFW</em></small>
+	</div>
+	
+</div> <!-- panel -->
