--- a/views/rivers/show.ejs
+++ b/views/rivers/show.ejs
@@ -5,308 +5,16 @@
 <div class="container">
     <div class="row">
         
-        <!-- Sidebar Nav -->
-        <div class="col-md-3" id="sidebar-sticky">
-            <div class="panel panel-info">
-                            <div class="panel-heading">
-            <h1 class="text-center" style="color:black;"><%=river.name%></h1>
-            </div>
-            
-            <div class="list-group" id="river-menu">
-                <nav>
-                    <ul class="nav" role="tablist">
-                        <li class="list-group-item active"><a href="#weather"><span class="glyphicon glyphicon-certificate" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Weather</a></li>
-                        <li class="list-group-item"><a href="#usgs"><span class="glyphicon glyphicon glyphicon-tint" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Flow Rates</a></li>
-                        <li class="list-group-item"><a href="#stocking"><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Stocking Report</a></li>
-                        <li class="list-group-item"><a href="#outings"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Notes & Research</a></li>
-                        <li class="list-group-item"><a href="#map"><span class="glyphicon glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Map</a></li>
-                    </ul>
-                </nav>
-
-
-
-        </div>
-                    </div> <!-- list-group -->
- 
-                
-                    <ul class="nav" id="side-menu-bottom">
-                        <li class="list-group-item"><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Dashboard</a></li>
-                        <li class="list-group-item"><a href="/rivers/<%= river._id %>/edit"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;Edit River</a></li>
-                    </ul>
-        </div>
-        <!-- End Sidebar -->
-
-        <!-- Main section -->
+        <% include ../partials/sidebar %>
+        
         <div class="col-md-9">
-            
-            <!--<div class="thumbnail">-->
-            <!--    <div class="caption-full">-->
-            <!--        <h4><%= river.name %></h4>-->
-            <!--        <h5><%= river.location %></h5>-->
-            <!--    </div>-->
-            <!--</div>-->
-            
-        <!-- Weather -->
-            <div class="panel panel-info"  id="weather">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Weather</h3>
-                </div>
-                <div class="panel-body">
-                <div class="container-fluid">
-                    <div class="row">
-                        <% include ../partials/weather %>    
-                    </div>
-                </div>
-                </div>
-                <div class="panel-footer text-right"><small><em>Weather Data Powered by DarkSky API</em></small></div>
-            </div>
-        <!-- end Weather -->
-
-        <!-- USGS river flow data -->            
-            <div class="panel panel-info" id="usgs">
-<style>
-/* TODO: better way than quick fix below */
-.panel img{
-width: 576px;
-height: 100%;
-}
-</style>
-                <div class="panel-heading">
-                    <h2 class="panel-title">River Conditions</h3>
-                </div>
-                
-                <div class="panel-body">
-                    <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-5" style="padding-left:0px; padding-right:0px">
-                            <h2 style="margin-top:10px; text-align: center;">Current River Flow<br/>
-                            <small><%= usgsData.value.timeSeries[0].sourceInfo.siteName %></small></h2>
-                            
-                          <div style="padding:10px; border:1px solid #ddd; border-radius:4px;" class="bg-warning">
-                          <h3 style="text-align:center; margin:0;"><%= usgsData.value.timeSeries[0].values[0].value[0].value %> cf/s
-                          <small>as of <%= new Date(usgsData.value.timeSeries[0].values[0].value[0].dateTime).toLocaleTimeString([], {weekday: 'short', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit'}); %></small></h3>
-                            <div class="alert alert-danger" role="alert" style="margin:10px 0px 0px; padding:5px;"><em>[###] higher than average for today</em></div>
-                            </div>
-                
-               
-            </div> <!-- col-md-6-->
-                        
-<div style="float: right; background: #f5f5f5; border:1px solid #ddd; border-radius: 4px; padding:10px 15px;">
-USGS Data Location: 
-<div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    <%= usgsData.value.timeSeries[0].sourceInfo.siteName %> (<%=usgsData.value.timeSeries[0].sourceInfo.siteCode[0].value%>)
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    <li class="disabled"><a href="#">[Other USGS Data Station on Same River]</a></li>
-    <li class="disabled"><a href="#">[Other USGS Data Station on Same River]</a></li>
-    <li class="disabled"><a href="#">[Other USGS Data Station on Same River]</a></li>
-  </ul>
+            <% include ../partials/weather %>
+            <% include ../partials/usgs %>
+            <% include ../partials/stocking %>
+            <% include ../partials/journals %>
+            <% include ../partials/map %>
+        </div> 
+    </div>
 </div>
-
-</div>
-
-
-
-             </div>
-             <hr/>
-             <div class="row">
-                 <div class="col" style="text-align: center;">
-                     <h2 style="margin-top:10px; text-align: center;">USGS Data Chart<br/></h2>
-                      <img src="http://waterdata.usgs.gov/nwisweb/graph?site_no=<%=river.usgsID%>&parm_cd=00060" style="margin:0 auto;"/> 
-
-                 </div>
-             </div>
-                </div> <!-- container -->
-            </div> <!-- panel-body -->
-            <div class="panel-footer text-right"><small><em>River Data from USGS.gov</em></small></div>
-            </div> <!-- panel -->
-        <!-- end of USGS -->
-
-        <!-- Trout Stocking -->
-            <div class="panel panel-info" id="stocking">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Trout Stocking</h3>
-                </div>
-                                <div class="panel-body">
-                <div class="container-fluid">
-                    <div class="row">
-                        <% include ../partials/stocking %> 
-                    </div>
-                </div>
-                </div>
-                <div class="panel-footer text-right"><small><em>Stocking Data via Massachusetts DFW</em></small></div>
-            </div>
-        <!-- END trout stocking -->
-        
-        <!-- Journal Entries -->
-            <div class="panel panel-info" id="outings">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Notes & Research</h3>
-                </div>
-                                <div class="panel-body">
-                <p>
-                    <a class="btn btn-success" href="/rivers/<%=river._id%>/journals/new">+ Add New Entry</a>
-                </p>
-            
-                <% river.journals.forEach(function(journal){ %>
-                <% /* For given river, lookup in DB all associated Journal entries */ %>
-            
-                    <p>
-                        <strong>
-                            <%= journal.date.toLocaleString('en-us', { 
-                                    timeZone: 'UTC', 
-                                    weekday: 'long', 
-                                    year: 'numeric', 
-                                    month: 'long', 
-                                    day: 'numeric' 
-                                }) %>
-                            </strong> : 
-                        <%= journal.text %>
-                    </p>
-                    
-                <% }); /* river.journals.forEach() */ %>
-                </div>
-            </div>
-        <!-- End Journal Entries -->
-        
-        <!-- MAP -->
-            <div class="panel panel-info" id="outings">
-                <div class="panel-heading">
-                    <h2 class="panel-title">Map</h3>
-                </div>
-                
-                <div class="panel-body">
-                
-                <div id='map' style='width: 100%; height: 550px;'></div>
-                
-                <script>
-                    //pass river lat/lng from server-side to client-side
-                    //is there a better way to do this?
-                    var riverID =   '<%= river._id %>';
-                    var mapCenter = [<%=river.lng%>, <%=river.lat%>];
-
-                </script>
-
-    
-                <!-- MapBox API -->
-                <script type="text/javascript" src="../js/mapbox-show.js"></script>
-                <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-                <style>
-                    .marker {
-    font-size: 16px;
-    color: red;
-    border: 1px solid #000;
-    padding: 5px;
-    border-radius: 10px;
-    opacity: 0.9;
-    background: lightblue;
-}
-
-    /*.marker:hover{*/
-    /*    cursor:pointer;*/
-    /*}*/
-
-
-                </style>
-                <script>
-                    map.on('load', function(){
-                        console.log("Map onload");
-                        map.addLayer({
-                            "id": "points",
-                            "type": "symbol",
-                            "source": {
-                                "type": "geojson",
-                                "data": {
-                                    "type": "FeatureCollection",
-                                    "features": [
-                                        
-                        //Populate saved markers from database
-                        <% river.mapMarkers.forEach(function(marker){ console.log("Markers: " + marker); %>
-                                        {
-                                            "type": "Feature",
-                                            "properties": {
-                                                "type": "<%= marker.type %>",
-                                                "title": "<%= marker.title %>",
-                                                "description": "<%= marker.description %>",
-                        "icon": "star"
-                                            },
-                                            "geometry": {
-                                                "type": "Point",
-                                                "coordinates": [<%=marker.lng%>,<%=marker.lat%>]
-                                            }
-                                        },
-                        <% }); %>
-                                    ]
-                                }
-                            },
-                             "layout": {
-            "icon-image": "{icon}-15",
-            "icon-allow-overlap": true
-                            }
-                    }); //map.addLayer()
-                    
-                        // When a click event occurs on a feature in the places layer, open a popup at the
-    // location of the feature, with description HTML from its properties.
-    map.on('click', 'points', function (e) {
-        var coordinates = e.features[0].geometry.coordinates.slice();
-        let type = e.features[0].properties.type;
-        let title = e.features[0].properties.title;
-        var description = e.features[0].properties.description;
-
-                    
-                            let popup = `
-                                <h4>${type}</h4>
-                                <strong>${title}</strong>
-                                <p>${description}</p>
-                                <small>
-  <strong>Lat/Lng: </strong> [${Math.floor(e.lngLat.lat*10000)/10000}, ${Math.floor(e.lngLat.lng*10000)/10000}]
-</small>`;
-
-        // Ensure that if the map is zoomed out such that multiple
-        // copies of the feature are visible, the popup appears
-        // over the copy being pointed to.
-        while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-            coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-        }
-
-        new mapboxgl.Popup()
-            .setLngLat(coordinates)
-            .setHTML(popup)
-            .addTo(map);
-    });
-
-    // Change the cursor to a pointer when the mouse is over the places layer.
-    map.on('mouseenter', 'points', function () {
-        map.getCanvas().style.cursor = 'pointer';
-    });
-
-    // Change it back to a pointer when it leaves.
-    map.on('mouseleave', 'points', function () {
-        map.getCanvas().style.cursor = '';
-    });
-    
-                    }); //mapp.onLoad()
-                </script>
-                
-                
-                <!-- Notes to myself/plan for the future -->
-                <div class="thumbnail">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <h4>Map</h4>
-                        </div>
-                    </div>
-                </div>
-                </div>
-                </div>
-        <!-- END map -->
-        
-        </div> <!-- col-md-9 -->
-        <!-- END of Main Section -->
-        
-    </div> <!-- row -->
-</div> <!-- container -->
 
 <% include ../partials/footer %>
