--- a/views/rivers/edit.ejs
+++ b/views/rivers/edit.ejs
@@ -4,33 +4,55 @@
 
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Edit <%= river.name %></h1>
-
-        <div style="width:30%; margin:25px auto">
+        
+        <div class="thumbnail">
+            <div class="caption-full">
+                <h1 style="text-align: center;">Edit River: <%= river.name %></h1>
+            </div>
+        </div>
+        
+        <div class="col-md-3" id="sidebar-sticky">
         
             <form action="/rivers/<%= river._id %>?_method=PUT" method="POST">
-                
                 <div class="form-group">
-                    <input class="form-control" type="text" name="river[name]" value="<%= river.name %>">
+                    <label for="river-name">Name</label>
+                    <input class="form-control" id="river-name" type="text" name="river[name]" value="<%=river.name%>">
                 </div>
-                
                 <div class="form-group">
-                    <input class="form-control" type="text" name="river[location]" value="<%= river.location %>">
+                    <label for="river-lat">Lat:</label>
+                    <input class="form-control" id="river-lat" type="text" name="river[lat]" value="<%=river.lat%>">
                 </div>
-                
                 <div class="form-group">
-                    <input class="form-control" type="text" name="river[description]" value="<%= river.description %>">
+                    <label for="river-lng">Lng:</label>
+                    <input class="form-control" id="river-lng" type="text" name="river[lng]" value="<%=river.lng%>">
                 </div>
-                
+                <div class="form-group">
+                    <label for="river-location">Location:</label>
+                    <input class="form-control" id="river-location" type="text" name="river[location]" value="<%=river.location%>">
+                </div>
+                <div class="form-group">
+                    <label for="river-usgs">USGS Site Number:</label>
+                    <input class="form-control" id="river-usgs" type="text" name="river[usgsID]" value="<%=river.usgsID%>">
+                    <small class="form-text text-muted">
+                        <a href="https://maps.waterdata.usgs.gov/mapper/">USGS Site Number Lookup</a>
+                    </small>
+                </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-default btn-block btn-primary">Submit</button>
                 </div>
-
             </form>
-
-            <a href="/">Back to Rivers Page</a>
+            
+         </div> <!-- col-md-3 sidebar-sticky -->
+        
+        <div class="col-md-9">
+        
+            <div class="thumbnail" id="map" style="width:100%; height:400px; margin: 0 auto"></div>
+            <!--<script type="text/javascript" src="../js/mapbox-add.js"></script>-->
+            <p>Click point on map to auto-fill Latitude & Longitude</p>
+            <p><a href="/">Back to Rivers Page</a></p>
         </div>
-    </div> <!-- row -->
-</div> <!-- container -->
+    </div>
+</div>
+
 
 <% include ../partials/footer %>
