--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,3 +39,23 @@
         </div>    
         
     </nav>
+    
+            
+    <div class="container">
+        <div class="row">
+        
+        <% if(error && error.length > 0){ %>
+            <div class="alert alert-danger">
+                <%= error %>
+            </div>
+        <% } %>
+    
+        <% if(success && success.length > 0){ %>
+            <div class="alert alert-success">
+                <%= success %>
+            </div>
+        <% } %>
+        
+        </div>
+        
+    </div>
